--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.7.1"
+  },
+  "dependencies": {
+    "sweetalert2": "^11.6.5"
   }
 }
